Revision history for BS-HTTPD


0.02
	- made it possible to respond to requests asynchronously in C<BS::HTTPD>.
	- added lots of example scripts

0.01 Thu Mar 20 19:53:31 CET 2008
	- first release