@@ -7,6 +7,15 @@ no warnings;
 
 BS::HTTPD::Request - A web application request handle for L<BS::HTTPD>
 
+=head1 DESCRIPTION
+
+This is the request object as generated by L<BS::HTTPD> and given
+in the request callbacks.
+
+=head1 METHODS
+
+=over 4
+
 =cut
 
 sub new {
@@ -38,7 +47,7 @@ sub is_form_submit {
 sub form_id {
    my ($self) = @_;
    my $id = $self->parm ("_APP_SRV_FORM_ID");
-   $id = $self->parm ("a") if defined $self->parm ("a");
+   $id = $self->parm ("_afid") if defined $self->parm ("_afid");
    $id
 }
 
@@ -148,12 +157,28 @@ sub respond {
    }
 }
 
+=item B<link ($label, $callback, $newurl)>
+
+This method returns a html link which will call C<$callback>
+when the user follows the link. It uses the C<_afid> param name,
+so take care not to use it for other things.
+C<$newurl> should be undef or the new (local) destination url,
+see also the C<url> method above.
+
+=cut
+
 sub link {
    my ($self, $lbl, $cb, $newurl) = @_;
    my $id = $self->{httpd}->alloc_id ($cb);
    $newurl //= $self->url;
-   '<a href="'.$newurl.'?a='.$id.'">'.$lbl.'</a>';
+   '<a href="'.$newurl.'?_afid='.$id.'">'.$lbl.'</a>';
 }
+
+=item B<parm ($key)>
+
+Returns the first value of the form parameter C<$key> or undef.
+
+=cut
 
 sub parm {
    my ($self, $key) = @_;
@@ -163,12 +188,38 @@ sub parm {
    return undef;
 }
 
+=item B<content>
+
+Returns the request content or undef if only parameters for a form
+were transmitted.
+
+=cut
+
 sub content {
    my ($self) = @_;
    return $self->{content};
 }
 
+=item B<o ($str)>
+
+This method appends C<$str> to the response output of this request.
+The accumulated output can be sent back as 'text/html' by calling the
+C<respond> method without an argument.
+
+=cut
+
 sub o { shift->{output} .= join '', @_ }
 
+=back
+
+=head1 COPYRIGHT & LICENSE
+
+Copyright 2008 Robin Redeker, all rights reserved.
+
+This program is free software; you can redistribute it and/or modify it
+under the same terms as Perl itself.
+
+
+=cut
 
 1;
